home page working with a couple of issues
issues - git and linkedin icons not lining up with address, addresses
are blue instead of white, need space between contact lines

--- a/public/css/resume-portfolio-styling.css
+++ b/public/css/resume-portfolio-styling.css
@@ -1,10 +1,19 @@
 body {
   background-image: url(/img/ricepaper2.png);
-  color: white
+}
+
+.home {
+  color: white;
+}
+
+.home-contact {
+  font-size: 20px;
+  margin-left: 20px;
+  margin-top: 25px;
 }
 
 .navbar-font-color {
-  color: #FFF;
+  color: white;
 }
 
 .navbar-font-size {
@@ -17,7 +26,7 @@ body {
 }
 
 .navbar {
-  background-color: #0F2E0F;
+  background-image: url(/img/flowerpicnavbar.png);
 }
 
 
@@ -39,6 +48,7 @@ body {
   -moz-box-shadow:    3px 3px 5px 6px #999;
   -webkit-box-shadow: 3px 3px 5px 6px #999;
   box-shadow:         3px 3px 5px 6px #999;
+  clear: left;
 
 }
 
